@@ -6,7 +6,8 @@ CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(DINCLUDE)
 
 OBJS=	machine.o machine_algor.o machine_alpha.o \
 	machine_androidarm.o machine_arc.o \
-	machine_cats.o machine_cobalt.o machine_dreamcast.o machine_evbmips.o \
+	machine_cats.o machine_cobalt.o machine_cyclonevh.o \
+	machine_dreamcast.o machine_evbmips.o \
 	machine_hp700rx.o \
 	machine_hpcarm.o machine_hpcmips.o machine_hpcsh.o machine_iq80321.o \
 	machine_iyonix.o machine_landisk.o machine_luna88k.o machine_macppc.o \
